--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
       <nav>
         <!--ctrl + /-->
         <!-- logo and menu -->
-        <a href="#">
+        <a href="./index.html">
           <img src="./images/logo.svg" alt="logo" />
         </a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          gg
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#tradition-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
       <button type="submit">Замовити дзвінок</button>
       <!-- замовити дзвінок -->
     </header>
+
     <main>
       <!-- основний контент -->
-      <sectinn>
+      <section>
         <h1>Сучасна пекарня</h1>
-      </sectinn>
-      <sectinn>
+      </section>
+      <section id="tradition-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -46,8 +46,8 @@
           стильний дизайн та висока якість обслуговування!
         </p>
         <img src="./images/baiker-man.jpg" alt="baiker" />
-      </sectinn>
-      <sectinn>
+      </section>
+      <section id="chefs-section">
         <h2>Наші найкращі шеф -кухарі</h2>
         <ul>
           <li>
@@ -70,8 +70,8 @@
             </article>
           </li>
         </ul>
-      </sectinn>
-      <sectinn>
+      </section>
+      <section id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -99,23 +99,32 @@
             </article>
           </li>
         </ul>
-      </sectinn>
-      <sectinn>
+      </section>
+      <section id="contact-section">
         <h2>Приєднуйся до мережі пекарень</h2>
-      </sectinn>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546568137!2d30.488658576454334!3d50.4566696715933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1712497700434!5m2!1sru!2sua"
+          width="603"
+          height="595"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
     </main>
+
     <footer>
       <!-- footer -->
       <nav>
-        <a href="#">
+        <a href="./index.html">
           <!-- logo -->
           <img src="./images/logo.svg" alt="logo" />
         </a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#tradition-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
@@ -144,7 +153,7 @@
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
