--- a/test.html
+++ b/test.html
@@ -77,7 +77,7 @@
       allowfullscreen
     >
     </iframe>
-
+    <!-- Спец символи -->
     <p>Заголовок в тексті виділяеться тегом &lsaquo;h1&rsaquo;</p>
     <p>&copy; 2022 Дані захищені</p>
     <p>&#128386; &#10053;</p>
