--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+
+    <style>
+      h1 {
+        background-color: blueviolet;
+      }
+    </style>
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -27,7 +35,7 @@
     <main>
       <!-- основний контент -->
       <section>
-        <h1>Сучасна пекарня</h1>
+        <h1 style="color: burlywood">Сучасна пекарня</h1>
       </section>
       <section id="tradition-section">
         <ul>
