--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
 
-    <style>
-      h1 {
-        background-color: blueviolet;
-      }
-    </style>
-
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -28,14 +22,14 @@
           <li><a href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="submit">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
       <!-- замовити дзвінок -->
     </header>
 
     <main>
       <!-- основний контент -->
-      <section>
-        <h1 style="color: burlywood">Сучасна пекарня</h1>
+      <section class="main-section">
+        <h1 class="main-title">Сучасна пекарня</h1>
       </section>
       <section id="tradition-section">
         <ul>
