--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
           <img src="./images/logo.svg" alt="logo" />
         </a>
         <ul>
-          <li><a href="#tradition-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contact-section">Контакти</a></li>
+          <li>
+            <a class="link" href="#tradition-section">Наші традиції</a>
+          </li>
+          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#formats-section">Формати</a></li>
+          <li><a class="link" href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
       <button class="button" type="button">Замовити дзвінок</button>
@@ -29,15 +31,15 @@
     <main>
       <!-- основний контент -->
       <section class="main-section">
-        <h1 class="main-title">Сучасна пекарня</h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section id="tradition-section">
-        <ul>
+        <ul class="advantagest-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -50,7 +52,9 @@
         <img src="./images/baiker-man.jpg" alt="baiker" />
       </section>
       <section id="chefs-section">
-        <h2>Наші найкращі шеф -кухарі</h2>
+        <h2 class="section-title">
+          Наші найкращі <span class="accent">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -74,7 +78,7 @@
         </ul>
       </section>
       <section id="formats-section">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
@@ -103,7 +107,7 @@
         </ul>
       </section>
       <section id="contact-section">
-        <h2>Приєднуйся до мережі пекарень</h2>
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546568137!2d30.488658576454334!3d50.4566696715933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1712497700434!5m2!1sru!2sua"
           width="603"
