--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Сучасна пекарня</title>
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- Styles Css -->
     <link rel="stylesheet" href="./css/styles.css" />
