--- a/index.html
+++ b/index.html
@@ -18,190 +18,214 @@
   </head>
   <body>
     <header>
-      <nav>
-        <!--ctrl + /-->
-        <!-- logo and menu -->
-        <a href="./index.html">
-          <img src="./images/logo.svg" alt="logo" />
-        </a>
-        <ul>
-          <li>
-            <a class="link" href="#tradition-section">Наші традиції</a>
-          </li>
-          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a class="link" href="#formats-section">Формати</a></li>
-          <li><a class="link" href="#contact-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <button class="button" type="button">Замовити дзвінок</button>
-      <!-- замовити дзвінок -->
+      <div class="container">
+        <nav>
+          <!--ctrl + /-->
+          <!-- logo and menu -->
+          <a href="./index.html">
+            <img src="./images/logo.svg" alt="logo" />
+          </a>
+          <ul>
+            <li>
+              <a class="link" href="#tradition-section">Наші традиції</a>
+            </li>
+            <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+            <li><a class="link" href="#formats-section">Формати</a></li>
+            <li><a class="link" href="#contact-section">Контакти</a></li>
+          </ul>
+        </nav>
+        <button class="button" type="button">Замовити дзвінок</button>
+        <!-- замовити дзвінок -->
+      </div>
     </header>
 
     <main>
       <!-- основний контент -->
-      <section class="main-section">
-        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+      <section class="hero-section">
+        <div class="container">
+          <h1 class="hero-title">
+            <span class="accent">Сучасна</span> пекарня
+          </h1>
+        </div>
       </section>
-      <section id="tradition-section">
-        <ul class="advantagest-list">
-          <li class="advantagest-item">Великий попит на ринку</li>
-          <li class="advantagest-item">Доступні за бюджетом формати</li>
-          <li class="advantagest-item">Досвідчена управлінська команда</li>
-        </ul>
-        <h2 class="section-title">Новий формат традицій</h2>
-        <p class="tradition-text">
-          <span class="brand uppercase">shop bakery</span> — це пекарня, яка
-          взяла все найкраще, і зберегла смак традиційної випічки та
-          натуральність інгредієнтів.
-        </p>
-        <p class="tradition-text">
-          Ми працюємо як найвідоміші мережі—
-          <span class="brand">5 хвилин і замовлення готове.</span> А ще у наших
-          пекарень стильний дизайн та висока якість обслуговування!
-        </p>
-        <img src="./images/baiker-man.jpg" alt="baiker" />
+      <section>
+        <div class="container">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <ul class="advantagest-list">
+            <li class="advantagest-item">Великий попит на ринку</li>
+            <li class="advantagest-item">Доступні за бюджетом формати</li>
+            <li class="advantagest-item">Досвідчена управлінська команда</li>
+          </ul>
+        </div>
       </section>
-      <section id="chefs-section">
-        <h2 class="section-title">
-          Наші найкращі <span class="accent">шеф-кухарі</span>
-        </h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="Chef-title">Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-              <p>Я випічу для вас найсмачніщі вироби!</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="Chef-title">Влад</h3>
-              <p>Привіт, я Влад!</p>
-              <p>
-                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
-                з якою ми ділимось кожен раз з Вами через нашу випічку!
-              </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-            </article>
-          </li>
-        </ul>
+      <section class="tradition-section section" id="tradition-section">
+        <div class="container">
+          <h2 class="tradition-title section-title">Новий формат традицій</h2>
+          <p class="tradition-text">
+            <span class="brand uppercase">shop bakery</span> — це пекарня, яка
+            взяла все найкраще, і зберегла смак традиційної випічки та
+            натуральність інгредієнтів.
+          </p>
+          <p class="tradition-text">
+            Ми працюємо як найвідоміші мережі—
+            <span class="brand">5 хвилин і замовлення готове.</span> А ще у
+            наших пекарень стильний дизайн та висока якість обслуговування!
+          </p>
+          <img src="./images/baiker-man.jpg" alt="baiker" />
+        </div>
       </section>
-      <section id="formats-section">
-        <h2 class="section-title">Формати</h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Walrus</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
+      <section class="section" id="chefs-section">
+        <div class="container">
+          <h2 class="chefs-title section-title">
+            Наші найкращі <span class="accent">шеф-кухарі</span>
+          </h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="chef-title">Настя</h3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+                <p>Я випічу для вас найсмачніщі вироби!</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="Chef-title">Влад</h3>
+                <p>Привіт, я Влад!</p>
                 <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
+                  Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
+                  любов, з якою ми ділимось кожен раз з Вами через нашу випічку!
                 </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Horseshoe</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
-                <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
-                </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Handlebar</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
-                <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
-                </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-        </ul>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section id="contact-section">
-        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546568137!2d30.488658576454334!3d50.4566696715933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1712497700434!5m2!1sru!2sua"
-          width="603"
-          height="595"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+      <section class="section" id="formats-section">
+        <div class="container">
+          <h2 class="formats-title section-title">Формати</h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="format-title" lang="en">Walrus</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="format-title" lang="en">Horseshoe</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="format-title" lang="en">Handlebar</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section" id="contact-section">
+        <div class="container">
+          <h2 class="contact-title section-title">
+            Приєднуйся до мережі пекарень
+          </h2>
+          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546568137!2d30.488658576454334!3d50.4566696715933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1712497700434!5m2!1sru!2sua"
+            width="603"
+            height="595"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </section>
     </main>
 
     <footer>
-      <!-- footer -->
-      <nav>
-        <a href="./index.html">
-          <!-- logo -->
-          <img src="./images/logo.svg" alt="logo" />
-        </a>
-        <ul>
-          <li><a class="link" href="#tradition-section">Наші традиції</a></li>
-          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a class="link" href="#formats-section">Формати</a></li>
-          <li><a class="link" href="#contact-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="address-link" href="tel:+380960000007"
-              >+ 38 (096) 000 00 07</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="mailto:shopbakery@gmail.com"
-              >shopbakery@gmail.com</a
-            >
-          </li>
+      <div class="container">
+        <!-- footer -->
+        <nav>
+          <a href="./index.html">
+            <!-- logo -->
+            <img src="./images/logo.svg" alt="logo" />
+          </a>
+          <ul>
+            <li><a class="link" href="#tradition-section">Наші традиції</a></li>
+            <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+            <li><a class="link" href="#formats-section">Формати</a></li>
+            <li><a class="link" href="#contact-section">Контакти</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a class="address-link" href="tel:+380960000007"
+                >+ 38 (096) 000 00 07</a
+              >
+            </li>
+            <li>
+              <a class="address-link" href="mailto:shopbakery@gmail.com"
+                >shopbakery@gmail.com</a
+              >
+            </li>
 
-          <li>
-            <a
-              class="address-link"
-              href="https://maps.app.goo.gl/MYM3tRZ3UVz25qGt8"
-              target="_blank"
-            >
-              Україна, м. Київ, вул. Січових Стрільців 54
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- facebook icon -->
-              F
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- instagram icon -->
-              I
-            </a>
-          </li>
-        </ul>
-        <a class="address-link" href="#" target="_blank">
-          Політика конфіденційності
-        </a>
-        <p class="address-copyright">&copy; 2022 Дані захищені</p>
-      </address>
+            <li>
+              <a
+                class="address-link"
+                href="https://maps.app.goo.gl/MYM3tRZ3UVz25qGt8"
+                target="_blank"
+              >
+                Україна, м. Київ, вул. Січових Стрільців 54
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- facebook icon -->
+                F
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- instagram icon -->
+                I
+              </a>
+            </li>
+          </ul>
+          <a class="address-link" href="#" target="_blank">
+            Політика конфіденційності
+          </a>
+          <p class="address-copyright">&copy; 2022 Дані захищені</p>
+        </address>
+        S
+      </div>
     </footer>
   </body>
 </html>
