--- a/secondTest.html
+++ b/secondTest.html
@@ -10,8 +10,15 @@
     <link rel="stylesheet" href="./css/secondTest.css" />
   </head>
   <body>
-    <div class="box">1</div>
-    <div class="box">2</div>
-    <div class="box">3</div>
+    <div class="flex-container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <!-- <div class="item">5</div>
+      <div class="item">6</div>
+      <div class="item">7</div>
+      <div class="item">8</div> -->
+    </div>
   </body>
 </html>
