--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="container">
         <!-- footer -->
         <nav>
