--- a/secondTest.html
+++ b/secondTest.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/secondTest.css" />
   </head>
   <body>
+    <!-- Flex box -->
     <div class="flex-container">
       <div class="item">1</div>
       <div class="item">2</div>
@@ -20,5 +21,11 @@
       <div class="item">7</div>
       <div class="item">8</div> -->
     </div>
+    <!-- Gradient linea-->
+    <div class="testBlock"></div>
+    <div class="test"></div>
+    <!-- Gradient Radial -->
+    <div class="radial"></div>
+    <div class="radialTwo"></div>
   </body>
 </html>
