--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
       <section class="section" id="formats-section">
         <div class="container">
           <h2 class="formats-title section-title centered">Формати</h2>
+          <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+              <use href="./images/symbol-defs.svg#icon-arrowLeft"></use>
+            </svg>
+          </button>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -165,6 +170,11 @@
               </article>
             </li>
           </ul>
+          <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+              <use href="./images/symbol-defs.svg#icon-arrowLeft"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="section" id="contact-section">
@@ -224,14 +234,18 @@
             </li>
             <li>
               <a href="#">
-                <!-- facebook icon -->
-                F
+                <!-- facebook icon SVG -->
+                <svg class="adress-icon" width="32" height="32">
+                  <use href="./images/symbol-defs.svg#icon-facebookIcon"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
-                <!-- instagram icon -->
-                I
+                <!-- instagram icon SVG -->
+                <svg class="adress-icon" width="32" height="32">
+                  <use href="./images/symbol-defs.svg#icon-instagramIcon"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -240,7 +254,6 @@
           </a>
           <p class="address-copyright">&copy; 2022 Дані захищені</p>
         </address>
-        S
       </div>
     </footer>
   </body>
