--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </article>
               </li>
             </ul>
-            <button class="carousel-button" type="button">
+            <button class="carousel-button next" type="button">
               <svg width="16" height="16">
                 <use href="./images/symbol-defs.svg#icon-arrowLeft"></use>
               </svg>
@@ -294,7 +294,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
       </div>
