--- a/index.html
+++ b/index.html
@@ -302,39 +302,50 @@
           <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
 
           <div class="form-field">
-            <label class="form-label" for="user-name">Ім'я</label>
+            <label class="form-label visually-hidden" for="user-name">
+              Ім'я
+            </label>
             <input
               class="form-input"
               type="text"
               id="user-name"
               name="user-name"
+              placeholder="Ім'я"
             />
           </div>
 
           <div class="form-field">
-            <label class="form-label" for="user-tel">Телефон</label>
+            <label class="form-label visually-hidden" for="user-tel">
+              Телефон
+            </label>
             <input
               class="form-input"
               type="text"
               id="user-tel"
               name="user-tel"
+              placeholder="Телефон"
             />
           </div>
 
           <div class="form-field">
-            <label class="form-label" for="user-email">Електронна пошта</label>
+            <label class="form-label visually-hidden" for="user-email">
+              Електронна пошта
+            </label>
             <input
               class="form-input"
               type="email"
               id="user-email"
               name="user-email"
+              placeholder="Електронна пошта"
             />
           </div>
 
-          <button type="submit">Замовити дзвінок</button>
-          <p>
+          <button class="form-button button" type="submit">
+            Замовити дзвінок
+          </button>
+          <p class="form-terms">
             Натискаючи на кнопку я погоджуюсь
-            <a href="#">з політикою конфіденційності</a>
+            <a class="form-terms-link" href="#">з політикою конфіденційності</a>
           </p>
         </form>
       </div>
