--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <div class="backdrop">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
-        <form name="contact-form" autocomplete="off" novalidate>
+        <form name="contact-form" autocomplete="on" novalidate>
           <h2>Замовити дзвінок</h2>
           <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
 
