--- a/index.html
+++ b/index.html
@@ -203,6 +203,59 @@
               </h2>
               <p>Заповни форму, щоб ми звʼязались з тобою!</p>
               <!-- forma -->
+              <form name="contact-form" autocomplete="off" novalidate>
+                <h2>Замовити дзвінок</h2>
+                <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+
+                <div class="form-field">
+                  <label class="form-label visually-hidden" for="user-name">
+                    Ім'я
+                  </label>
+                  <input
+                    class="form-input"
+                    type="text"
+                    id="user-name"
+                    name="user-name"
+                    placeholder="Ім'я"
+                  />
+                </div>
+
+                <div class="form-field">
+                  <label class="form-label visually-hidden" for="user-tel">
+                    Телефон
+                  </label>
+                  <input
+                    class="form-input"
+                    type="text"
+                    id="user-tel"
+                    name="user-tel"
+                    placeholder="Телефон"
+                  />
+                </div>
+
+                <div class="form-field">
+                  <label class="form-label visually-hidden" for="user-email">
+                    Електронна пошта
+                  </label>
+                  <input
+                    class="form-input"
+                    type="email"
+                    id="user-email"
+                    name="user-email"
+                    placeholder="Електронна пошта"
+                  />
+                </div>
+
+                <button class="form-button button" type="submit">
+                  Замовити дзвінок
+                </button>
+                <p class="form-terms">
+                  Натискаючи на кнопку я погоджуюсь
+                  <a class="form-terms-link" href="#"
+                    >з політикою конфіденційності</a
+                  >
+                </p>
+              </form>
             </div>
 
             <iframe
@@ -297,7 +350,7 @@
     <div class="backdrop">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
-        <form name="contact-form" autocomplete="on" novalidate>
+        <form name="modal-form" autocomplete="off">
           <h2>Замовити дзвінок</h2>
           <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
 
@@ -311,6 +364,7 @@
               id="user-name"
               name="user-name"
               placeholder="Ім'я"
+              required
             />
           </div>
 
@@ -320,10 +374,12 @@
             </label>
             <input
               class="form-input"
-              type="text"
+              type="tel"
               id="user-tel"
               name="user-tel"
               placeholder="Телефон"
+              required
+              disabled
             />
           </div>
 
@@ -337,10 +393,11 @@
               id="user-email"
               name="user-email"
               placeholder="Електронна пошта"
+              required
             />
           </div>
 
-          <button class="form-button button" type="submit">
+          <button class="form-button button" type="submit" disabled>
             Замовити дзвінок
           </button>
           <p class="form-terms">
