--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
               id="user-name"
               name="user-name"
               placeholder="Ім'я"
+              minlength="2"
+              maxlength="20"
               required
             />
           </div>
@@ -378,8 +380,8 @@
               id="user-tel"
               name="user-tel"
               placeholder="Телефон"
+              pattern="^\+[0-9]{12}"
               required
-              disabled
             />
           </div>
 
@@ -397,7 +399,19 @@
             />
           </div>
 
-          <button class="form-button button" type="submit" disabled>
+          <div class="checkbox">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              id="terms-conditions"
+              name="terms-conditions"
+            />
+            <label class="checkbox-label" for="terms-conditions">
+              Я точно погоджуюсь з політикою конфеденційності
+            </label>
+          </div>
+
+          <button class="form-button button" type="submit">
             Замовити дзвінок
           </button>
           <p class="form-terms">
