--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             />
           </div>
 
-          <div class="checkbox">
+          <!-- <div class="checkbox">
             <input
               class="checkbox-input visually-hidden"
               type="checkbox"
@@ -409,7 +409,7 @@
             <label class="checkbox-label" for="terms-conditions">
               Я точно погоджуюсь з політикою конфеденційності
             </label>
-          </div>
+          </div> -->
 
           <button class="form-button button" type="submit">
             Замовити дзвінок
